--- a/index.html
+++ b/index.html
@@ -21,33 +21,58 @@
         </header>
         <div class="name-and-bio">
             <h1>Tarek's Code</h1>
-            <p> Hello there, Welcome To my Code's World,
-            <br> I'm Tarek Salame, a Full Stack Web Developer👨🏻‍💻
+            <p> السلام عليكم، صلّيتوا على النبي ؟
+                <br>
+                اهلا وسهلا فيكم في عالم المواقع الخاص فيي
+                <br>
+                انا طارق سلامة مطور مواقع شامل
+                <br>
+                خلينا مع بعض نحوّل رؤيتك الرقمية لحقيقة !
             </p>
             <h3>
                 Lets Bring Your Digital Vision To Life
             </h3>
+            <a href="https://wa.me/972525272910">بتقدر تتواصل معي عن طريق الواتس اب<br>
+            .. هناك برد اسرع</a>
         </div>
         <div class="services">
             <div class="service">
                 <img src="./web_11052565.png" alt="landing-page">
-                <h3>Landing Pages</h3>
+                <h3>صفحات هبوط</h3>
             </div>
             <div class="service">
                 <img src="./payment_3277706.png" alt="landing-page">
-                <h3>Digital Business Cards</h3>
+                <h3>بطاقات عمل رقمية</h3>
             </div>
             <div class="service">
                 <img src="./menu_7244401.png" alt="landing-page">
-                <h3>Food Menus</h3>
+                <h3>قوائم طعام/منتجات</h3>
             </div>
             <div class="service">
                 <img src="./shopping_4183908.png" alt="landing-page">
-                <h3>Products Lists</h3>
+                <h3>مواقع لحجز الادوار</h3>
             </div>
             <div class="service">
                 <img src="./layout_2191704.png" alt="landing-page">
-                <h3>Images Sites</h3>
+                <h3>مواقع عرض الخدمات</h3>
+            </div>
+            <div id="special" class="service">
+                <img src="./payment_3277706.png" alt="landing-page">
+                <h3>! 🎊🎉 جديد<br>
+                مواقع واتسابية<br>
+                عروض خاصة<br>
+                للمشاريع الصغيرة</h3>
+            </div>
+            <div class="service">
+                <img src="./layout_2191704.png" alt="landing-page">
+                <h3>مواقع للمشاريع الصغيرة</h3>
+            </div>
+            
+        </div>
+        <div class="my-projects">
+            <h3>My Projects ..</h3>
+            <div id="projects">
+
             </div>
         </div>
         <Footer>
@@ -61,7 +86,6 @@
                     <a href="https://www.instagram.com/tarekscode/" target="_blank"><img src="insta.png" alt="insta"></a>
                     <a href="https://www.tiktok.com/@tarekbenjehad" target="_blank"><img src="tiktok.png" alt="tiktok"></a>
                     <a href="mailto:tareq.salame@gmail.com" target="_blank"><img src="mail_14070465.png" alt="tiktok"></a>
-
                 </div>
             </div>
             </div>
