--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TareksCode</title>
+    <link rel="apple-touch-icon" href="./tarek.png" sizes="180x180"/>
+    <link rel="icon" href="./tarek.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="./tarek.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="./tarek.png" sizes="48x48" type="image/png" />
     <link
     href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
     rel="stylesheet"
   />
+  <meta
+      name="description"
+      content="خلينا نحوّل رؤيتك الرقمية لحقيقة !"
+    />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,7 +39,7 @@
             <h3>
                 Lets Bring Your Digital Vision To Life
             </h3>
-            <a href="https://wa.me/972525272910">بتقدر تتواصل معي عن طريق الواتس اب<br>
+            <a target="_blank" href="https://wa.me/972525272910">بتقدر تتواصل معي عن طريق الواتس اب<br>
             .. هناك برد اسرع</a>
         </div>
         <div class="services">
@@ -56,6 +63,7 @@
                 <img src="./layout_2191704.png" alt="landing-page">
                 <h3>مواقع عرض الخدمات</h3>
             </div>
+            <a style="text-decoration: none;" href="https://wa.me/972525272910" target="_blank">
             <div id="special" class="service">
                 <img src="./payment_3277706.png" alt="landing-page">
                 <h3>! 🎊🎉 جديد<br>
@@ -63,6 +71,7 @@
                 عروض خاصة<br>
                 للمشاريع الصغيرة</h3>
             </div>
+        </a>
             <div class="service">
                 <img src="./layout_2191704.png" alt="landing-page">
                 <h3>مواقع للمشاريع الصغيرة</h3>
