--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
     rel="stylesheet"
   />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=Dancing+Script:wght@400..700&family=Diphylleia&family=Marcellus&family=Reem+Kufi+Fun:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
   <meta
       name="description"
-      content="خلينا نحوّل رؤيتك الرقمية لحقيقة !"
+      content="منحوّل رؤيتك الرقمية لحقيقة !"
     />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -29,17 +34,14 @@
         <div class="name-and-bio">
             <img style="width: 30%;" src="./logos/tarekbenjehad.png" alt="tarekbenjehad">
             <h1>Tarek's Code</h1>
-            <p> السلام عليكم، صلّيتوا على النبي ؟
+            <p style="direction: rtl;">
+                انا طارق سلامة مطور مواقع شامل
                 <br>
                 اهلا وسهلا فيكم في عالم المواقع الخاص فيي
                 <br>
-                انا طارق سلامة مطور مواقع شامل
-                <br>
                 خلينا مع بعض نحوّل رؤيتك الرقمية لحقيقة !
             </p>
-            <h3>
-                Lets Bring Your Digital Vision To Life
-            </h3>
+
 
             <a target="_blank" href="https://wa.me/972525272910">بتقدر تتواصل معي عن طريق الواتس اب<br>
             .. هناك برد اسرع</a>
@@ -47,44 +49,32 @@
         </div>
 
         <div class="services">
+            <h3 id="LBY">
+                Lets Bring Your Digital Vision To Life
+            </h3>
             <div class="service">
-                <img src="./web_11052565.png" alt="landing-page">
-                <h3>صفحات هبوط</h3>
-            </div>
-            <div class="service">
-                <img src="./payment_3277706.png" alt="landing-page">
                 <h3>بطاقات عمل رقمية</h3>
             </div>
             <div class="service">
-                <img src="./menu_7244401.png" alt="landing-page">
-                <h3>قوائم طعام/منتجات</h3>
+                <h3>قوائم طعام</h3>
             </div>
             <div class="service">
-                <img src="./shopping_4183908.png" alt="landing-page">
-                <h3>مواقع لحجز الادوار</h3>
+                <h3>قوائم منتجات</h3>
             </div>
             <div class="service">
-                <img src="./layout_2191704.png" alt="landing-page">
-                <h3>مواقع عرض الخدمات</h3>
+                <h3>صفحات هبوط</h3>
             </div>
-        <a style="text-decoration: none;" href="https://wa.me/972525272910" target="_blank">
-            <div id="special" class="service">
-                <img src="./layout_2191704.png" alt="landing-page">
+            <div  class="service">
                 <h3>موقع بيع لمنتج واحد <br> بسعر مميز 
                 </h3>
             </div>
-        </a>
-        <a style="text-decoration: none;" href="https://wa.me/972525272910" target="_blank">
-            <div id="special" class="service">
-                <img src="./payment_3277706.png" alt="landing-page">
+            <!-- <div  class="service">
                 <h3>! 🎊🎉 جديد<br>
                 مواقع واتسابية<br>
                 عروض خاصة<br>
                 للمشاريع الصغيرة</h3>
-            </div>
-        </a>
+            </div> -->
             <div class="service">
-                <img src="./layout_2191704.png" alt="landing-page">
                 <h3>مواقع للمشاريع الصغيرة</h3>
             </div>
             
@@ -116,7 +106,6 @@
             </div>
             
         </div>
-        <img style="width: 20%;margin-top: 5%;" src="./logos/tarekbenjehad.png" alt="tarekbenjehad">
         </Footer>
 
 
