--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="profile-img" src="tarek.png" alt="tarek">
         </header>
         <div class="name-and-bio">
-            <img style="width: 30%;" src="./logos/tarekbenjehad.png" alt="tarekbenjehad">
+            <img style="width: 100px;" src="./logos/tarekbenjehad.png" alt="tarekbenjehad">
             <h1>Tarek's Code</h1>
             <p style="direction: rtl;">
                 انا طارق سلامة مطور مواقع شامل
